--- a/project_1_bsds.ipynb
+++ b/project_1_bsds.ipynb
@@ -52,6 +52,18 @@
     "\n",
     "Submit your work in a well-organized GitHub repo, where the code is appropriately commented and all members of the group have made significant contributions to the commit history. (10/100 pts)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "195be15e",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
