--- a/01_assignment_wrangling_and_eda.ipynb
+++ b/01_assignment_wrangling_and_eda.ipynb
@@ -2177,12 +2177,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "19482ab1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![](/workspace/undergrad_ml_assignments/01_Q6-1.jpg)\n"
+   ]
   },
   {
    "cell_type": "markdown",
